# Tamagotchi

./: CMakeLists.txt  README.md  main.cpp
Animals/: Animal.cpp  Animal.h  Duck.cpp  Duck.h  Gogol.cpp  Gogol.h  Krohal.cpp  Krohal.h
Game/: AnimalTypes.h  Game.cpp  Game.h  Storage.cpp  Storage.h
